feat&docs: add City controller & route.
- test: City API feature tests.
