# public/docs/openapi.yaml
@@ -1533,3 +1533,88 @@ paths:
                 required: true
                 schema:
                     type: integer
+    /api/cities:
+        get:
+            summary: 'Display a listing of the cities.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200, when cities displayed.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: [{ id: '{city-id}', created_at: '{city-created-at}', updated_at: '{city-updated-at}', city: '{city-city}' }]
+                                properties:
+                                    data: { type: array, example: [{ id: '{city-id}', created_at: '{city-created-at}', updated_at: '{city-updated-at}', city: '{city-city}' }], items: { type: object } }
+            tags:
+                - '05. Cities'
+            security: []
+    '/api/cities/{city}':
+        get:
+            summary: 'Display the specified city.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200, when city displayed.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: { id: '{city-id}', created_at: '{city-created-at}', updated_at: '{city-updated-at}', city: '{city-city}', city_areas: [{ id: '{city-area-id}', created_at: '{city-area-created-at}', updated_at: '{city-area-updated-at}', city_id: '{city-area-city-id}', city_area: '{city-area-city-area}', zip_code: '{city-area-zip-code}' }] }
+                                properties:
+                                    data: { type: object, example: { id: '{city-id}', created_at: '{city-created-at}', updated_at: '{city-updated-at}', city: '{city-city}', city_areas: [{ id: '{city-area-id}', created_at: '{city-area-created-at}', updated_at: '{city-area-updated-at}', city_id: '{city-area-city-id}', city_area: '{city-area-city-area}', zip_code: '{city-area-zip-code}' }] } }
+                404:
+                    description: '404, when city not found.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: 'City(ID:{city-id}) is not found.'
+                                properties:
+                                    data: { type: string, example: 'City(ID:{city-id}) is not found.' }
+            tags:
+                - '05. Cities'
+            security: []
+        parameters:
+            -
+                in: path
+                name: city
+                description: 'The id of the city.'
+                example: 20
+                required: true
+                schema:
+                    type: integer
